F&GDEV/src/objects/AgentID__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AgentIDs</relationshipLabel>
        <relationshipName>AgentIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AddrCity__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddrPostalCode__c</fullName>
        <label>Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddrState__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddrStreet__c</fullName>
        <label>Street</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgentID_Name_ID__c</fullName>
        <formula>AgentName__c  &amp; &quot; - &quot; &amp;  AgentID__c &amp; &quot; - &quot; &amp;  ContractType__c  &amp; &quot; Lev &quot; &amp;  Text(HierarchyLevel__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AgentID_Name_ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgentID__c</fullName>
        <externalId>true</externalId>
        <label>Agent ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgentName__c</fullName>
        <label>Agent Name</label>
        <length>105</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractRole__c</fullName>
        <label>Contract Role</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractStatusText__c</fullName>
        <label>Contract Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractType__c</fullName>
        <label>Contract Type</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FirstPolicyIssued__c</fullName>
        <label>First Policy Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AgentIDs (Group Name)</relationshipLabel>
        <relationshipName>AgentIDs_Group</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HierarchyLevel__c</fullName>
        <label>Hierarchy Level</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last3FixedAnnuity__c</fullName>
        <label>Fixed Annuity</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last3IndexedAnnuity__c</fullName>
        <label>Indexed Annuity</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last3IndexedUL__c</fullName>
        <label>Indexed UL</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last3IssuedPoliciesAnnuity__c</fullName>
        <label>Annuity Issued Count (L3)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last3IssuedPoliciesLife__c</fullName>
        <label>Life Issued Count (L3)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last3IssuedWrittenPoliciesAnnuity__c</fullName>
        <label>Annuity Issued Count as WA (L3)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last3IssuedWrittenPoliciesLife__c</fullName>
        <label>Life Issued Count as WA (L3)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last3OtherLife__c</fullName>
        <label>Other Life (L3)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last3SPIA__c</fullName>
        <label>SPIA</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last3SPIUL__c</fullName>
        <label>SPIUL (L3)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last3TAPPoliciesAnnuity__c</fullName>
        <label>Annuity TAP Count (L3)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last3TAPPoliciesLife__c</fullName>
        <label>Life TAP Count (L3)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last3TAPWrittenPoliciesAnnuity__c</fullName>
        <label>Annuity TAP Count as WA (L3)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last3TAPWrittenPoliciesLife__c</fullName>
        <label>Life TAP Count as WA (L3)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last3TotalAnnualizedLife__c</fullName>
        <label>Total Annualized Life (L3)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last3TotalAnnuity__c</fullName>
        <label>Total Annuity (L3)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last3TotalLife__c</fullName>
        <label>Total Life (L3)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LastPolicyIssued__c</fullName>
        <label>Last Policy Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LicenseStatesText__c</fullName>
        <label>Licensed States</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MgaAgentID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MGA Agent ID</label>
        <referenceTo>AgentID__c</referenceTo>
        <relationshipLabel>MGA Downlines</relationshipLabel>
        <relationshipName>AgentIDs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OtherPhone__c</fullName>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Power_Partner_Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For reporting purposes only.</description>
        <label>Power Partner Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PriorYearAnnuity__c</fullName>
        <label>Prior Year Annuity</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriorYearIssuedPoliciesAnnuity__c</fullName>
        <label>Prior Year Annuity Issued Count</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriorYearIssuedPoliciesLife__c</fullName>
        <label>Prior Year Life Issued Count</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriorYearIssuedWrittenPoliciesAnnuity__c</fullName>
        <label>Prior Year Annuity Issued Count as WA</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriorYearIssuedWrittenPoliciesLife__c</fullName>
        <label>Prior Year Life Issued Count as WA</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriorYearLife__c</fullName>
        <label>Prior Year Life</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriorYearTAPPoliciesAnnuity__c</fullName>
        <label>Prior Year Annuity TAP Count</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriorYearTAPPoliciesLife__c</fullName>
        <label>Prior Year Life TAP Count</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriorYearTAPWrittenPoliciesAnnuity__c</fullName>
        <label>Prior Year Annuity TAP Count as WA</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriorYearTAPWrittenPoliciesLife__c</fullName>
        <label>Prior Year Life TAP Count as WA</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectedAnnuity__c</fullName>
        <label>Projected Annuity</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedLife__c</fullName>
        <label>Projected Life</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <description>For reporting purposes only.</description>
        <label>Territory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Territory 1</fullName>
                </value>
                <value>
                    <fullName>Territory 2</fullName>
                </value>
                <value>
                    <fullName>Territory 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Top1ProductName__c</fullName>
        <label>Top Seller 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top1ProductPercent__c</fullName>
        <label>Top Seller 1 %</label>
        <precision>9</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Top1ProductSales__c</fullName>
        <label>Top Seller 1 $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Top2ProductName__c</fullName>
        <label>Top Seller 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top2ProductPercent__c</fullName>
        <label>Top Seller 2 %</label>
        <precision>9</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Top2ProductSales__c</fullName>
        <label>Top Seller 2 $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Top3ProductName__c</fullName>
        <label>Top Seller 3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top3ProductPercent__c</fullName>
        <label>Top Seller 3 %</label>
        <precision>9</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Top3ProductSales__c</fullName>
        <label>Top Seller 3 $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UplineAgentID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Upline AgentID</label>
        <referenceTo>AgentID__c</referenceTo>
        <relationshipLabel>Direct Downline</relationshipLabel>
        <relationshipName>AgentIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Upline_BB__c</fullName>
        <formula>UplineAgentID__r.Name</formula>
        <label>Upline BB</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YTDAnnuity__c</fullName>
        <label>YTD Annuity</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDIssuedPoliciesAnnuity__c</fullName>
        <label>YTD Annuity Issued Count</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTDIssuedPoliciesLife__c</fullName>
        <label>YTD Life Issued Count</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTDIssuedWrittenPoliciesAnnuity__c</fullName>
        <label>YTD Annuity Issued Count as WA</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTDIssuedWrittenPoliciesLife__c</fullName>
        <label>YTD Life Issued Count as WA</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTDLife__c</fullName>
        <label>YTD Life</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDTAPPoliciesAnnuity__c</fullName>
        <label>YTD Annuity TAP Count</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTDTAPPoliciesLife__c</fullName>
        <label>YTD Life TAP Count</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTDTAPWrittenPoliciesAnnuity__c</fullName>
        <label>YTD Annuity TAP Count as WA</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTDTAPWrittenPoliciesLife__c</fullName>
        <label>YTD Life TAP Count as WA</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Fixed_Annuity__c</fullName>
        <label>YTD Fixed Annuity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Indexed_Annuity__c</fullName>
        <label>YTD Indexed Annuity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_SPIA__c</fullName>
        <label>YTD SPIA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>AgentID</label>
    <listViews>
        <fullName>Gradient</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>YTDAnnuity__c</columns>
        <columns>MgaAgentID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MgaAgentID__c</field>
            <operation>contains</operation>
            <value>000244419</value>
        </filters>
        <label>Gradient</label>
    </listViews>
    <listViews>
        <fullName>Level15and16</fullName>
        <columns>NAME</columns>
        <columns>AgentName__c</columns>
        <columns>YTDAnnuity__c</columns>
        <columns>YTDLife__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HierarchyLevel__c</field>
            <operation>equals</operation>
            <value>15,16</value>
        </filters>
        <label>Level15and16</label>
    </listViews>
    <listViews>
        <fullName>Life_Agents_With_Personal</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>MgaAgentID__c</columns>
        <columns>NAME</columns>
        <columns>ContractType__c</columns>
        <columns>YTDTAPWrittenPoliciesLife__c</columns>
        <columns>PriorYearTAPWrittenPoliciesLife__c</columns>
        <columns>LastPolicyIssued__c</columns>
        <columns>Top1ProductName__c</columns>
        <columns>Last3TotalAnnualizedLife__c</columns>
        <columns>YTDLife__c</columns>
        <columns>ProjectedLife__c</columns>
        <columns>PriorYearLife__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PriorYearTAPWrittenPoliciesLife__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>YTDTAPWrittenPoliciesLife__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ContractStatusText__c</field>
            <operation>notEqual</operation>
            <value>Terminated</value>
        </filters>
        <label>Life Agents - With Personal Production</label>
    </listViews>
    <listViews>
        <fullName>R1_Agents</fullName>
        <columns>NAME</columns>
        <columns>YTDAnnuity__c</columns>
        <columns>ProjectedAnnuity__c</columns>
        <columns>PriorYearAnnuity__c</columns>
        <columns>Last3TotalAnnuity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ContractType__c</field>
            <operation>startsWith</operation>
            <value>R1</value>
        </filters>
        <filters>
            <field>ContractStatusText__c</field>
            <operation>notEqual</operation>
            <value>Terminated</value>
        </filters>
        <label>R1 Agents</label>
    </listViews>
    <listViews>
        <fullName>Recently_Sold_First_Policy</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>MgaAgentID__c</columns>
        <columns>NAME</columns>
        <columns>FirstPolicyIssued__c</columns>
        <columns>LastPolicyIssued__c</columns>
        <columns>Top1ProductName__c</columns>
        <columns>YTDAnnuity__c</columns>
        <columns>YTDTAPPoliciesAnnuity__c</columns>
        <columns>YTDTAPWrittenPoliciesAnnuity__c</columns>
        <columns>YTDLife__c</columns>
        <columns>YTDTAPPoliciesLife__c</columns>
        <columns>YTDTAPWrittenPoliciesLife__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FirstPolicyIssued__c</field>
            <operation>equals</operation>
            <value>LAST_N_WEEKS:4</value>
        </filters>
        <filters>
            <field>YTDAnnuity__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>YTDLife__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Recently Sold First Policy</label>
    </listViews>
    <listViews>
        <fullName>RepositionedMGAs</fullName>
        <columns>NAME</columns>
        <columns>MgaAgentID__c</columns>
        <columns>UplineAgentID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MgaAgentID__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>HierarchyLevel__c</field>
            <operation>equals</operation>
            <value>15</value>
        </filters>
        <label>RepositionedMGAs</label>
    </listViews>
    <nameField>
        <label>Agent ID Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AgentIDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>